stubs.h

DdNode *Cudd_bddUnivAbstract_s(DdManager *m, DdNode *x, DdNode *y);
DdNode *Cudd_bddExistAbstract_s(DdManager *m, DdNode *x, DdNode *y);
DdNode *wrappedCuddNot_s(DdNode *x);
DdNode *Cudd_bddXnor_s(DdManager *m, DdNode *x, DdNode *y);
DdNode *Cudd_bddXor_s(DdManager *m, DdNode *x, DdNode *y);
DdNode *Cudd_bddNor_s(DdManager *m, DdNode *x, DdNode *y);
DdNode *Cudd_bddNand_s(DdManager *m, DdNode *x, DdNode *y);
DdNode *Cudd_bddOr_s(DdManager *m, DdNode *x, DdNode *y);
DdNode *Cudd_bddAnd_s(DdManager *m, DdNode *x, DdNode *y);
DdNode *Cudd_bddIthVar_s(DdManager *m, int i);
DdNode *Cudd_ReadLogicZero_s(DdManager *m);
DdNode *Cudd_ReadOne_s(DdManager *m);
DdNode *Cudd_bddVarMap_s(DdManager *m, DdNode *x);