cuddwrap.h

void wrappedCuddDumpDot(DdManager *m, DdNode *f, char *filename);
void deref(DdManager *m, DdNode *d);
int wrappedCuddIsComplement(DdNode *f);
int **allSat(DdManager *m, DdNode *n, int *nterms, int *nvars);
int *oneSat(DdManager *m, DdNode *n, int *nvars);